<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nxn.intercomm.MainActivity">

    <item android:id="@+id/imp_csv"
        android:title="@string/imp_csv"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_input_get"
        app:showAsAction="never" />
    <item android:id="@+id/exp_csv"
        android:title="@string/exp_csv"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_input_delete"
        app:showAsAction="never" />
    <item android:id="@+id/clear_channels"
        android:title="@string/clear_channels"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="never"/>
    <item android:id="@+id/delete_all_action"
        android:title="@string/delete_all"
        app:showAsAction="never"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_menu_delete"/>
    <item android:id="@+id/sos_set"
        android:title="@string/sos_set"
        app:showAsAction="never"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_menu_call"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="10"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="10"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="never" />
    <item android:id="@+id/power"
        android:title="@string/power"
        android:checkable="true"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="always"
        android:orderInCategory="2"/>
    <item android:id="@+id/action_quit"
        android:title="@string/action_quit"
        android:orderInCategory="20"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="always"/>
    <item android:id="@+id/three_dots_item"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/ch_search"
                android:title="@string/ch_search_help"
                android:orderInCategory="0"
                android:icon="@android:drawable/ic_menu_search"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/ch_add"
                android:title="@string/ch_add"
                android:orderInCategory="1"
                android:icon="@android:drawable/ic_menu_add"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/ch_del"
                android:title="@string/ch_del"
                android:orderInCategory="2"
                android:icon="@android:drawable/ic_delete"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/clear_history_action"
                android:title="@string/clear_history"
                android:orderInCategory="2"
                app:showAsAction="ifRoom"
                android:actionViewClass="mChat"
                android:icon="@android:drawable/ic_menu_delete"/>
            <item android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:orderInCategory="3"
                android:icon="@android:drawable/ic_menu_preferences"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
