<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="right" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="1"
        android:fillViewport="true"
        android:padding="5dp"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chat"
            android:bufferType="spannable"
            android:enabled="true"
            android:linksClickable="true"
            android:clickable="true"
            android:textIsSelectable="true" />
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/smile"
            android:src="@drawable/aa"
            android:scaleType="center"
            android:contentDescription="@string/smiles" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:layout_weight="1"
            android:textSize="22dp"
            android:cursorVisible="true"
            android:hint="@string/message"
            android:singleLine="false"
            android:inputType="textShortMessage|textNoSuggestions|textLongMessage"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/send"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/send" />

    </LinearLayout>

</LinearLayout>