<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="320dp"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nick_lable"
                android:id="@+id/nick_lable"
                android:singleLine="true"
                android:layout_column="0"
                android:layout_weight=".1" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set_nick"
                android:enabled="true"
                android:inputType="text"
                android:layout_weight="1000"
                android:layout_column="1"
                android:maxLength="25"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/set_min"
                android:id="@+id/min_lable"
                android:layout_column="0"
                android:layout_weight=".1" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set_min"
                android:layout_weight="1000"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/set_max"
                android:id="@+id/max_lable"
                android:singleLine="true"
                android:layout_column="0"
                android:layout_weight=".1" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set_max"
                android:layout_weight="1000"
                android:layout_column="1"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/step_label"
                android:id="@+id/textView"
                android:layout_column="0"
                android:layout_weight=".1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_step"
                android:layout_weight="1000"
                android:entries="@array/step"
                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scan"
                android:id="@+id/set_scan_label"
                android:layout_column="0"
                android:layout_weight=".1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_delay"
                android:layout_column="1"
                android:layout_weight="1000"
                android:entries="@array/scan_delay" />
        </TableRow>
    </TableLayout>
</LinearLayout>