<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="300dp"
        android:longClickable="false"
        android:layout_margin="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"
                android:id="@+id/name_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_column="1"
                android:layout_weight="1000"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rxfreq_label"
                android:id="@+id/rxfreq_label"
                android:layout_column="0"
                android:layout_weight=".1"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/rxfreq"
                android:layout_column="1"
                android:layout_weight="1000"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txfreq_label"
                android:id="@+id/txfreq_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txfreq"
                android:layout_column="1"
                android:layout_weight="1000"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txctcss_label"
                android:id="@+id/txctcss_label"
                android:singleLine="true"
                android:layout_column="0"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txctcss"
                android:entries="@array/ctcss"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rxctcss_label"
                android:id="@+id/rxctcss_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rxctcss"
                android:focusable="false"
                android:entries="@array/ctcss"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sqx_label"
                android:id="@+id/sqx_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sqx"
                android:entries="@array/sq"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>
    </TableLayout>

</LinearLayout>